# lead-management-system

./: .env.example  .gitignore  DEPLOY.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  seed.py  seed_dummy.py  seed_engineers.py
backend/app/agents/: base.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  calendar.py  cv.py  issues.py  leads.py  profiles.py  reports.py  teams.py  users.py
backend/app/core/: config.py  database.py  enums.py  security.py
backend/app/models/: __init__.py  auth_token.py  calendar.py  issue.py  lead.py  profile.py  tenant.py  user.py
backend/app/schemas/: bulk.py  calendar.py  issue.py  lead.py  user.py
backend/app/services/: bulk_update.py  cv_ats.py  email.py  google_calendar.py  import_excel.py  tenant.py  users.py
backend/app/templates/email/: monthly_report.html  weekly_report.html
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.check.tsbuildinfo  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdminUsersTable.tsx  BulkActionBar.tsx  BulkUpdateModal.tsx  Charts.tsx  ChartsLazy.tsx  CreatableSelect.tsx  DailyReport.tsx  EngineerReport.tsx  FilterPanel.tsx  IssuesTable.tsx  KpiCard.tsx  LeadIssueReporter.tsx  LeadStatusEditor.tsx  LeadsTable.tsx  MonthlyTargetsTable.tsx  MultiChart.tsx  PageHeader.tsx  ProfilesTable.tsx  ResourceLeadsReport.tsx  SearchableSelect.tsx  Sidebar.tsx  (+3 more)
scripts/: dev.sh  start.sh
(+40 files in other folders)
